--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "promisemonkey",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Easily convert objects, functions and METHODs to the Q promise API",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha"
+    "test": "node_modules/.bin/mocha",
+    "install": "node bin/install.js"
   },
   "repository": "https://github.com/nharbour/promisemonkey",
   "keywords": [
